--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,11 @@
                 <version>5.10.0</version>
                 <scope>test</scope>
             </dependency>
+            <dependency>
+                <groupId>org.javatuples</groupId>
+                <artifactId>javatuples</artifactId>
+                <version>1.2</version>
+            </dependency>
         </dependencies>
 
 
