--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
                 <artifactId>javatuples</artifactId>
                 <version>1.2</version>
             </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>2.17.0</version>
+            </dependency>
         </dependencies>
 
 
