--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,10 @@
                     <target>${maven.compiler.target}</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.2.1</version> </plugin>
         </plugins>
     </build>
 
